[package]
name = "https_reverse"
version = "0.1.0"
edition = "2021"

[dependencies]
rcgen = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pingora = { version = "0.6", features = ["proxy", "rustls"] }
pingora-core = "0.6"
pingora-http = "0.6"
pingora-error = "0.6"
async-trait = "0.1"
